[tool.poetry]
name = "blog_app"
version = "0.1.0"
description = ""
authors = ["Te-jé Rodgers <tjd.rodgers@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
mypy = "^0.812"
typer = "^0.3.2"

[tool.poetry.scripts]
devtools = "cli.devtools:app"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
